# django6

./: .gitignore  ci.yml  manage.py  pyproject.toml  temp.py  test.sh  필기.txt
.github/workflows/: CI.yml
oz_django6/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py  tests.py
tabom/migrations/: 0001_initial.py  0002_memo_remove_article_created_at_and_more.py  0003_article_created_at_article_updated_at_and_more.py
tabom/services/: article_service.py  like_service.py
tabom/test/: test_article_service.py  test_like_service.py
